<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_generate_interface_docs</name>
  <version>0.0.0</version>
  <description>
    Tool to generate interfaces public API documentation
  </description>
  <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernández</maintainer>
  <license>Apache License 2.0</license>
  
  <exec_depend>python3-argparse</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
